# ternary-dynamics-python

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/ternary_dynamics/: __init__.py  critical_point.py  dynamic_mode.py  phase_transition.py  time_series.py
tests/: test_dynamics.py
