[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ternary-dynamics"
version = "0.1.0"
description = "Python implementation of ternary agent dynamics — time series, phase transitions, critical points"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SuperInstance" }]
keywords = ["ternary", "dynamics", "agent", "simulation", "phase-transition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/ternary_dynamics"]
